@@ -30,13 +30,11 @@ extern "C" {
 #include <stdio.h>
 #include "gerb_image.h"
 
-
 #define TOOL_MIN 1
 #define TOOL_MAX 999
 
-
 gerb_image_t *parse_drillfile(FILE *fd);
-
+int drill_file_p(FILE *fd);
 
 #ifdef __cplusplus
 }
