@@ -1,7 +1,15 @@
+2001-11-27 Andreas Andersson (e92_aan@e.kth.se)
+
+	* src/drill.h src/drill.c:
+	  Added drill_file_p(); which checks whether a file could
+	  be a drill file or not.
+	
+
 2001-11-26 Stefan Petersen (spe@stacken.kth.se)
 
 	* configure.in: Now --data works when running ./configure.
 	  A patch from Wojciech Kazubski <wk@ire.pw.edu.pl>
+
 
 2001-11-26 Andreas Andersson (e92_aan@e.kth.se)
 
